# dnsmasq-logrotate

./: .editorconfig  .gitattributes  .gitignore  .mailmap  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap.sh  configure.ac
.github/: dependabot.yml
.github/workflows/: build-test.yml
lxcu/debian/: install.list
lxcu/fedora/: install.list
lxcu/opensuse/: install.list
lxcu/ubuntu/: install.list
m4/: .gitignore
misc/: TODO.txt
src/conf/rootetc/logrotate/: Makefile.am  dnsmasq.in
src/man/8/: Makefile.am  dnsmasq-postrotate.8.man.in  dnsmasq-postrotate.sh.8.man.in
src/prg/bash/: Makefile.am  dnsmasq-postrotate.sh.in
src/prg/test-data/etc/: Makefile.am  Testing.txt.in
src/prg/test-data/etc/dnsmasq.d/: test.dpkg-dist.in
src/prg/test-data/etc/dnsmasq.d/level1/level2/: mg2.conf.in
src/prg/test-data/etc/logrotate.d/: dnsmasq.in
src/prg/test-data/etc1/: Makefile.am  Testing.txt.in  dnsmasq.conf.in
src/prg/test-data/etc1/dnsmasq.d/: mg.conf.in
src/prg/test-data/etc1/dnsmasq.d/level1/level2/level3/: mg3.conf.in
src/prg/test-data/etc2/: Testing.txt.in  dnsmasq.conf.in
src/prg/test-data/etc2/dnsmasq.d/level1/: mg1.conf.in
src/prg/test-data/etc3/: Testing.txt.in
src/prg/test-data/etc4/: Makefile.am  Testing.txt.in
src/prg/test-data/etc4/dnsmasq.d/level1/level2/: mg2.conf.in
src/prg/test-data/etc4/dnsmasq.d/level1/level2/level3/: mg3.conf.in
